--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "jest",
+    "watch:test": "jest --watchAll",
+    "coverage": "jest --coverage"
   },
   "dependencies": {
     "react": "15.3.2",
-    "react-native": "0.35.0"
+    "react-native": "^0.36.0"
   },
   "jest": {
     "preset": "jest-react-native"
